--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   ],
   "browser_action": {
       "default_title": "Bitcoin Price",
-      "default_icon": "icon.png",
+      "default_icon": "icon4.png",
       "default_popup": "popup.html"
   },
   "background": {
