--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,17 +1,22 @@
 {
-  "name": "Bitcoin Price",
-  "description": "update bitcoin price every ten minutes",
-  "version": "1.0",
-  "permissions": [
-    "tabs", "http://*/*", "https://*/*"
-  ],
-  "browser_action": {
-      "default_title": "Bitcoin Price",
-      "default_icon": "icon4.png",
-      "default_popup": "popup.html"
-  },
-  "background": {
-   "scripts": ["background.js"]
-  },
-  "manifest_version": 2
+    "name": "Bitcoin Price",
+    "description": "update bitcoin price every ten minutes",
+    "version": "1.0",
+    "permissions": [
+        "tabs", "http://*/*", "https://*/*"
+    ],
+    "browser_action": {
+        "default_title": "Bitcoin Price",
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+    "background": {
+        "scripts": ["background.js"]
+    },
+    "content_scripts": [{
+        "matches": ["https://www.baidu.com/*"],
+        "css": ["style.css"],
+        "js": ["content.js"]
+    }],
+    "manifest_version": 2
 }
